test/compile_errors/stage1/test/reify_typeOf_with_no_arguments.zig
export fn entry() void {
    _ = @TypeOf();
}

// @TypeOf with no arguments
//
// tmp.zig:2:9: error: expected at least 1 argument, found 0
